# apex_optics

./: .gitignore  fetch_file_from_ifarm.sh  submit-all-replays.sh  submit-script.sh
data/mc/: out_fp_R_V3.root
data/sieve_holes/: fits_L_O1.root  fits_L_O2.root  fits_L_O3.root  fits_L_O4.root  fits_L_O5.root  fits_L_O6.root  fits_L_O7.root  fits_L_O8.root  fits_L_V1.root  fits_L_V2.root  fits_L_V3.root  fits_L_allFoils.root  fits_L_allWires.root  fits_L_allWiresAndFoils.root  holes_L_O1.root  holes_L_O2.root  holes_L_O3.root  holes_L_O4.root  holes_L_O5.root  holes_L_O6.root  holes_L_O7.root  holes_L_O8.root  holes_L_V1.root  holes_L_V2.root  holes_L_V3.root
scripts/: Add_fitgauss_exec_to_TPad.C  add_noise_to_polynomials.C  benchmark_new_mlp.C  cleanup_optics_replay.C  convert_holefit_data.C  convert_mc_to_fpcoords.C  convert_real_to_fpcoords.C  create_MC_polynomial_models.C  create_NPolyArray_fit.C  create_fp_correction_poly.C  create_polycut_from_zycut.C  create_polynomial_cut.C  create_toy_mlp_data.C  draw_dummy_mlp.C  draw_trajectory_fan.C  examine_coord_diff.C  examine_x_raster.C  fit_points_mc_forward.C  fitpoints_mc_fp_q1_sv.C  fitpoints_mc_fp_sv.C  fitpoints_mc_sv_fp.C  fitpoints_mc_sv_q1_fp.C  gaussfit_2d.C  generate_sievehole_data.C  invariant_mass_reco.C  isolate_carbonfoils.C  isolate_fp_coordinate.C  isolate_sieveholes.C  make_data_from_holefit.C  make_fitdata_with_MC_model.C  make_projected_data_gif.C  make_z_hcs_polynomial.C  metropolis_A_production.C  metropolis_BetheHeitler.C  newton_iteration_test.C  newton_iteration_test_mlp.C  opticsModel_chained.C  opticsModel_fp_correction.C  plot_all_coordinates.C  pretend_bump.C  (+22 more)
scripts/include/: Add_TParameter_to_TFile.h  Add_branch_from_Trajectory_t.h  BothArmValue_t.h  ChainedOpticsModel.h  Fit_fcn_to_TH2D.h  Fit_gauss_to_TH2D.h  Get_TParameter_from_TFile.h  NPolyArray_fit.h  RDFNodeAccumulator.h  TestAngleReco.h  fit_gaus_to_hist.h  get_cmd_stdout.h  get_n_cpus.h  measure_model_accuracy.h
scripts/opticsModel/: ModularOpticsModel.h  chained.h  chained_production.h  forward.h  forward_production.h  piecewise.h
scripts/recycling_bin/: README.md  add_noise_to_polynomials.C  convert_holefit_data.C  convert_mc_to_fpcoords.C  fitpoints_mc_fp_q1_sv.C  fitpoints_mc_fp_sv.C  fitpoints_mc_sv_fp.C  fitpoints_mc_sv_q1_fp.C  fwdmodel_pick_holes.C  make_fitdata_with_MC_model.C  make_raster_polynomial.C  make_z_hcs_polynomial.C  metropolis_A_production.C  metropolis_BetheHeitler.C  newton_iteration_test.C  test_NPolyArray_fit.C  test_NPolyArray_inverse.C  test_TestAngleReco_with_montecarlo.C  test_forward_chain.C  test_forward_fp_model.C  test_metropolis.C  train_mlp.C  (+1 more)
src/: AngleRecoTester.cxx  AngleRecoTester.h  ApexOptics.cxx  ApexOptics.h  ArmMode.h  CMakeLists.txt  LinkDef.h  MultiLayerPerceptron.cxx  MultiLayerPerceptron.h  NPoly.cxx  NPoly.h  NPolyArray.cxx  NPolyArray.h  NPolyArrayChain.cxx  NPolyArrayChain.h  NPolyModel.cxx  NPolyModel.h  PolynomialCut.cxx  PolynomialCut.h  PolynomialCutApp.cxx  PolynomialCutApp.h  RMatrix.cxx  RMatrix.h  SieveHole.h  pick_sieveholes.cxx
src/isolate_sieveholes/: EvaluateCutFrame.cxx  EvaluateCutFrame.h  PickSieveHoleApp.cxx  PickSieveHoleApp.h  SaveOutputFrame.cxx  SaveOutputFrame.h  SieveHoleData.cxx  SieveHoleData.h
(+1 files in other folders)
